--- a/src/pages/joblist/joblist.html
+++ b/src/pages/joblist/joblist.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="testone">
+    <ion-navbar color="light">
       <ion-buttons start>
         <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
