--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,7 +41,7 @@
       
       <div>
         <b class="forgotp">FORGOT PASSWORD?</b>
-        <b class="joinn">JOIN NOW</b>
+        <b class="joinn" (click)="signUp()">JOIN NOW</b>
       </div>
 
 </ion-content>
