Freelancer Registration Done

--- a/src/pages/setupprofile/setupprofile.html
+++ b/src/pages/setupprofile/setupprofile.html
@@ -23,7 +23,7 @@
 
     <div [hidden]="isshidden" (click)="revert()">
         <p style="margin-left: 30px;margin-right:30px" id="currentskills" align="center">
-            <ion-icon item-right name="ios-create-outline"></ion-icon>
+            <ion-icon item-right name="ios-remove-circle-outline"></ion-icon>
           </p>
 
     </div>
