--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -6,18 +6,6 @@
 -->
 <ion-header>
   <ion-navbar color="light">
-    <ion-buttons left>
-      <button navPop ion-button icon-only>
-        <ion-icon color="primary" name="arrow-back"></ion-icon>
-      </button>
-    </ion-buttons>
-
-
-    <ion-buttons right>
-      <button navPop ion-button icon-only (click)="goPrevious()">
-        <ion-icon color="primary" name="ios-checkmark-outline"></ion-icon>
-      </button>
-    </ion-buttons>
     <ion-title>Write about yourself</ion-title>
   </ion-navbar>
 </ion-header>
@@ -27,5 +15,8 @@
 
     </ion-textarea> -->
 
-    <ion-textarea type="text" [(ngModel)]="writeup" (input)="autoSizeDescription($event);"></ion-textarea>
+    <ion-textarea placeholder="Write about yourself here" type="text" [(ngModel)]="writeup" (input)="autoSizeDescription($event);"></ion-textarea>
+
+
+    <button ion-button block (click)="goPrevious()">Save</button>
 </ion-content>
