--- a/src/pages/chatdetails/chatdetails.html
+++ b/src/pages/chatdetails/chatdetails.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="testone">
+  <ion-navbar color="light">
     <ion-title>{{toUser.name}}</ion-title>
   </ion-navbar>
 
